--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -41,8 +41,12 @@ jobs:
         storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}
         keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}
         keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}
-        storeFile=upload-keystore.jks
+        storeFile=app/upload-keystore.jks
         EOF
+        # Verify keystore file was created
+        ls -la android/app/upload-keystore.jks
+        # Verify key.properties was created
+        cat android/key.properties
         
     - name: Get dependencies
       run: flutter pub get
