--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -36,15 +36,15 @@ jobs:
         
     - name: Setup Android signing
       run: |
-        echo '${{ secrets.ANDROID_KEYSTORE }}' | base64 --decode > android/app/upload-keystore.jks
+        echo '${{ secrets.ANDROID_KEYSTORE }}' | base64 --decode > android/upload-keystore.jks
         cat > android/key.properties << EOF
         storePassword=${{ secrets.ANDROID_STORE_PASSWORD }}
         keyPassword=${{ secrets.ANDROID_KEY_PASSWORD }}
         keyAlias=${{ secrets.ANDROID_KEY_ALIAS }}
-        storeFile=app/upload-keystore.jks
+        storeFile=upload-keystore.jks
         EOF
         # Verify keystore file was created
-        ls -la android/app/upload-keystore.jks
+        ls -la android/upload-keystore.jks
         # Verify key.properties was created
         cat android/key.properties
         
@@ -53,9 +53,11 @@ jobs:
       
     - name: Build APK
       run: flutter build apk --release
+      working-directory: .
       
     - name: Build AAB
       run: flutter build appbundle --release
+      working-directory: .
       
     - name: Get version from pubspec
       id: get_version
