--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_crashlytics: ^5.0.2
   firebase_analytics: ^12.0.2
   path_provider: ^2.1.4
+  app_links: ^6.3.2
 
 dev_dependencies:
   flutter_test:
