--- a/.github/workflows/build-ios-unsigned.yml
+++ b/.github/workflows/build-ios-unsigned.yml
@@ -1,9 +1,11 @@
 name: Build Unsigned IPA for AltStore
 
 on:
-  workflow_dispatch: # manually trigger builds
+  workflow_dispatch: # Manually trigger builds
   push:
     branches: [ master ]
+    tags:
+      - "v*.*.*" # Trigger on version tags
 
 jobs:
   build-ios:
@@ -13,45 +15,74 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.35.2"
-
-      - name: Install CocoaPods
-        run: sudo gem install cocoapods
+          channel: 'stable'
+          cache: true
 
       - name: Setup Firebase Configuration
         run: |
-          # Create Firebase configuration files from secrets
           echo "${{ secrets.FIREBASE_JSON_CONFIG }}" > android/app/google-services.json
           echo "${{ secrets.IOS_FIREBASE_CONFIG }}" > ios/Runner/GoogleService-Info.plist
           echo "${{ secrets.FIREBASE_OPTIONS_DART }}" > lib/firebase_options.dart
 
-      - name: Get dependencies
+      - name: Get Flutter dependencies
         run: flutter pub get
 
-      - name: Configure Xcode for unsigned build
+      - name: Install CocoaPods dependencies
         run: |
-          # Disable automatic code signing
-          sed -i '' 's/ENABLE_BITCODE = YES;/ENABLE_BITCODE = NO;/g' ios/Runner.xcodeproj/project.pbxproj
-          sed -i '' 's/CODE_SIGN_IDENTITY = "iPhone Developer";/CODE_SIGN_IDENTITY = "";/g' ios/Runner.xcodeproj/project.pbxproj
-          sed -i '' 's/CODE_SIGN_STYLE = Automatic;/CODE_SIGN_STYLE = Manual;/g' ios/Runner.xcodeproj/project.pbxproj
-          sed -i '' 's/DEVELOPMENT_TEAM = .*;/DEVELOPMENT_TEAM = "";/g' ios/Runner.xcodeproj/project.pbxproj
-          sed -i '' '/PROVISIONING_PROFILE_SPECIFIER/d' ios/Runner.xcodeproj/project.pbxproj
+          cd ios
+          pod install --repo-update
+          cd ..
 
-      - name: Build iOS (no codesign)
-        run: flutter build ios --release --no-codesign
-
-      - name: Package IPA
+      - name: Build unsigned iOS app
         run: |
-          mkdir Payload
+          flutter build ios --release --no-codesign --no-tree-shake-icons
+        env:
+          FLUTTER_BUILD_MODE: release
+
+      - name: Create IPA from .app bundle
+        run: |
+          # Create Payload directory
+          mkdir -p Payload
+          
+          # Copy the built .app bundle
           cp -r build/ios/iphoneos/Runner.app Payload/
-          zip -r UnsignedApp.ipa Payload
+          
+          # Create IPA (which is just a zip file with .ipa extension)
+          zip -r qBitConnect-unsigned.ipa Payload
+          
+          # Cleanup
           rm -rf Payload
+          
+          # Get version info
+          VERSION=$(grep "version:" pubspec.yaml | sed 's/version: //g' | sed 's/+.*//g')
+          BUILD=$(grep "version:" pubspec.yaml | sed 's/.*+//g')
+          echo "Built version: $VERSION ($BUILD)"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "BUILD=$BUILD" >> $GITHUB_ENV
 
       - name: Upload IPA Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Unsigned-IPA
-          path: UnsignedApp.ipa
+          name: qBitConnect-Unsigned-IPA-${{ env.VERSION }}
+          path: qBitConnect-unsigned.ipa
+          retention-days: 30
+
+      - name: Create Release (if tagged)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: qBitConnect-unsigned.ipa
+          draft: false
+          prerelease: false
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
