--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: qbitconnect
 description: "A Flutter app for managing qBittorrent remotely with a modern UI and real-time updates."
 publish_to: 'none'
 
-version: 1.4.3+16
+Release version: 1.4.4+17
 
 environment:
   sdk: ^3.8.1
