--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: qbitconnect
 description: "A Flutter app for managing qBittorrent remotely with a modern UI and real-time updates."
 publish_to: 'none'
-
-Release version: 1.4.4+17
+version: 1.4.4+17
 
 environment:
   sdk: ^3.8.1
