--- a/.github/workflows/ios-ipa-build.yml
+++ b/.github/workflows/ios-ipa-build.yml
@@ -42,6 +42,16 @@ jobs:
       - name: "Optional: flutter clean"
         run: flutter clean
 
+      - name: Create dummy flutterfire command to prevent build script errors
+        run: |
+          mkdir -p /usr/local/bin
+          echo '#!/bin/bash' > /usr/local/bin/flutterfire
+          echo 'echo "CI: Skipping flutterfire command - $@"' >> /usr/local/bin/flutterfire
+          echo 'exit 0' >> /usr/local/bin/flutterfire
+          chmod +x /usr/local/bin/flutterfire
+          which flutterfire
+          flutterfire --version || true
+
       - name: Build Flutter iOS app (unsigned - may fail, that's OK)
         run: flutter build ios --release --no-codesign || echo "Flutter build completed, continuing..."
 
