--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_analytics: ^12.0.2
   path_provider: ^2.1.4
   app_links: ^6.3.2
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
